--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "url": "https://github.com/aytmamatov/excel/issues"
   },
   "homepage": "https://github.com/aytmamatov/excel#readme",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
