--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "homepage": "https://github.com/aytmamatov/excel#readme",
   "private": true,
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
