--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
         "code": 100
       }
     ],
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "no-console": "warn"
   },
   "extends": ["eslint:recommended", "google"]
 }
