--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,16 @@
   },
   "rules": {
     "object-curly-spacing": ["warn", "always"],
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "require-jsdoc": "off",
+    "max-len": [
+      "warn",
+      {
+        "code": 100
+      }
+    ],
+    "operator-linebreak": "off",
+    "no-console": "warn"
   },
   "extends": ["eslint:recommended", "google"]
 }
