--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
       }
     ],
     "operator-linebreak": "off",
-    "no-console": "warn"
+    "no-console": "warn",
+    "new-cap": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
